# aplacc

./: README.md  aplacc.cabal  test.sh
examples/: Makefile  cosmin.tail  generate_examples.sh  inner2.tail  manual-translation.hs  matmul.tail  matmul2.tail  mb-test1.tail  mb-test2.tail  signal.tail  signal1.tail  signal2.tail  test.tail  test1.tail  test10.tail  test11.tail  test12.tail  test13.tail  test15.tail  test16.tail  test17.tail  test18.tail  test19.tail  test2.tail  test21.tail  test23.tail  test24.tail  test25.tail  test27.tail  test28.tail  test3.tail  test30.tail  test4.tail  test5.tail  test7.tail  test9.tail
src/: Main.hs
src/APLAcc/: Conversion.hs  Primitives.hs
src/APLAcc/SimpleAcc/: AST.hs  ToHaskell.hs
src/APLAcc/TAIL/: AST.hs  Parser.hs
src/Tail/: Ast.hs  Converter.hs  Converter2.hs  Output.hs  Parser.hs  Primitives.hs  SimpleAccAst.hs
tests/: generate_examples.sh
tests/failing/: binaryops.tail  blacksch.tail  blackscholes.tail  ceilfloormaxmin.tail  chars.tail  circ.tail  cos.tail  cosmin.tail  drop.tail  dtransp.tail  eacheaster.tail  easter.tail  easter3000.tail  else.tail  fib10.tail  format.tail  fun2.tail  idx.tail  idxassign.tail  inner4.tail  life.tail  life2.tail  ln.tail  now.out  now.tail  opr2.tail  opr3.tail  pi.tail  pi2.tail  pow.tail  powmat.tail  powscl.tail  pricer.tail  primes2.tail  quadassign.tail  readdoublevecfile.tail  readfile.tail  readintvecfile.tail  repl.tail  replicate.tail  (+41 more)
tests/working/: abcd.tail  blackscholes.tail  bool.tail  bool1.out  bool1.tail  ceilfloormaxmin.tail  circ.tail  cos.tail  cosmin.out  cosmin.tail  drop.tail  dtransp.tail  easter.tail  expd.tail  fib10.tail  inner2.tail  inner3.tail  innerLegrand5.3.tail  innerproduct.tail  life.tail  life2.out  life2.tail  ln.tail  mb-test8b-plain-ctx.tail  mean.tail  opr1.tail  opr2.tail  opr3.tail  powmat.tail  powscl.tail  quadassign.tail  reduce.tail  residue.tail  rot.tail  rotfirst.tail  shape.tail  sierpinski.tail  sierpinski0.tail  signal.tail  signal1.out  (+34 more)
